--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section id="video-section" class="video-section">
     <div class="video-background">
       <video autoplay muted loop class="video" >
-        <source src="/images/video.mp4" type="video/mp4">
+        <source src="./images/video.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
